Various code smell fixes